tests/snapshots/snapshot_comprehensive__snap_event_error_without_code.snap
---
source: tests/snapshot_comprehensive.rs
expression: e
---
{
  "ts": "2025-01-15T10:30:00Z",
  "type": "error",
  "message": "unknown failure"
}
