tests/snapshots/snapshot_comprehensive__snap_event_file_changed.snap
---
source: tests/snapshot_comprehensive.rs
expression: e
---
{
  "ts": "2025-01-15T10:30:00Z",
  "type": "file_changed",
  "path": "src/lib.rs",
  "summary": "Added error handling"
}
