tests/snapshots/snapshot_comprehensive__snap_event_run_started.snap
---
source: tests/snapshot_comprehensive.rs
expression: e
---
{
  "ts": "2025-01-15T10:30:00Z",
  "type": "run_started",
  "message": "Starting execution"
}
