tests/snapshots/snapshot_comprehensive__snap_event_text_delta.snap
---
source: tests/snapshot_comprehensive.rs
expression: e
---
{
  "ts": "2025-01-15T10:30:00Z",
  "type": "assistant_delta",
  "text": "Hello, "
}
