tests/snapshots/snapshot_comprehensive__snap_event_tool_call_nested.snap
---
source: tests/snapshot_comprehensive.rs
expression: e
---
{
  "ts": "2025-01-15T10:30:00Z",
  "type": "tool_call",
  "tool_name": "Grep",
  "tool_use_id": "tu_002",
  "parent_tool_use_id": "tu_001",
  "input": {
    "path": "src/",
    "pattern": "fn main"
  }
}
