tests/snapshots/snapshot_comprehensive__snap_event_tool_result_success.snap
---
source: tests/snapshot_comprehensive.rs
expression: e
---
{
  "ts": "2025-01-15T10:30:00Z",
  "type": "tool_result",
  "tool_name": "Read",
  "tool_use_id": "tu_001",
  "output": {
    "content": "fn main() {}"
  },
  "is_error": false
}
