tests/snapshots/snapshot_comprehensive__snap_event_with_ext_passthrough.snap
---
source: tests/snapshot_comprehensive.rs
expression: e
---
{
  "ts": "2025-01-15T10:30:00Z",
  "type": "assistant_delta",
  "text": "token",
  "ext": {
    "raw_message": {
      "vendor_field": "value"
    }
  }
}
