tests/snapshots/snapshot_comprehensive__snap_execution_lane_variants.snap
---
source: tests/snapshot_comprehensive.rs
expression: variants
---
[
  "patch_first",
  "workspace_first"
]
